--- a/src/CaseStoreBundle/Resources/views/Project/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/Project/index.html.twig
@@ -23,8 +23,12 @@
     <ul class="list-group">
         <li class="list-group-item"><a href="{{  path('case_store_project_case_studies', { 'projectId':project.publicId }) }}" class="btn btn-default">Case Studies</a></li>
         <li class="list-group-item"><a href="{{  path('case_store_project_case_study_field_definitions', { 'projectId':project.publicId }) }}" class="btn btn-default">Case Study Field Definitions</a></li>
-        <li class="list-group-item"><a href="{{  path('case_store_new_case_study', { 'projectId':project.publicId }) }}" class="btn btn-warning">New Case Study</a></li>
-        <li class="list-group-item"><a href="{{  path('case_store_new_case_study_field_definition', { 'projectId':project.publicId }) }}" class="btn btn-warning">New Case Study Field Definition</a></li>
+        {% if newCaseStudyAllowed %}
+            <li class="list-group-item"><a href="{{  path('case_store_new_case_study', { 'projectId':project.publicId }) }}" class="btn btn-warning">New Case Study</a></li>
+        {%  endif %}
+        {%  if newFieldDefinitionAllowed %}
+            <li class="list-group-item"><a href="{{  path('case_store_new_case_study_field_definition', { 'projectId':project.publicId }) }}" class="btn btn-warning">New Case Study Field Definition</a></li>
+        {%  endif %}
     </ul>
 
 {%  endblock %}
