--- a/src/CaseStoreBundle/Resources/views/CaseStudyEdit/editUsers.html.twig
+++ b/src/CaseStoreBundle/Resources/views/CaseStudyEdit/editUsers.html.twig
@@ -10,7 +10,7 @@
     <ol class="breadcrumb">
         <li><a href="{{ path('case_store_project', { 'projectId':project.publicId }) }}">Project {{  project.title }}</a></li>
         <li><a href="{{  path('case_store_case_study', { 'projectId':project.publicId, 'caseStudyId':caseStudy.publicId }) }}">Case Study</a></li>
-        <li class="active">Edit Users</li>
+        <li class="active">Edit Staff Involved</li>
     </ol>
 
     <ul>
