--- a/src/CaseStoreBundle/Resources/views/CaseStudy/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/CaseStudy/index.html.twig
@@ -12,10 +12,10 @@
         <li class="active">Case Study</li>
     </ol>
 
-    Case Study
+    <h1>Case Study</h1>
 
     {%  for fieldDefinition in fieldDefinitions %}
-        <div>{{  fieldDefinition.title }}</div>
+        <div class="caseStudyDataLabel">{{  fieldDefinition.title }}</div>
         {%  if fieldValues[fieldDefinition.publicId] is defined and fieldValues[fieldDefinition.publicId] %}
             {% if fieldDefinition.isTypeString %}
                 <div>{{ fieldValues[fieldDefinition.publicId].value  }}</div>
@@ -30,30 +30,43 @@
         <div></div>
     {%  endfor %}
 
-    <ul>
-        {%  for user in users %}
-            <li>{{  user.username }}</li>
-        {%  endfor %}
-    </ul>
+    {%  if users %}
+        <div class="caseStudyDataLabel">Staff Involved</div>
+        <ul>
+            {%  for user in users %}
+                <li>{{  user.username }}</li>
+            {%  endfor %}
+        </ul>
+    {%  endif %}
 
-    <ul>
-        {%  for document in documents %}
-            <li>
-                <div>{{  document.title }}</div>
-                <div><a href="{{ path('case_store_case_study_document_download', { 'projectId':project.publicId, 'caseStudyId':caseStudy.publicId,'documentId':document.publicId  }) }}">Download {{ document.originalFileName }}</a></div>
-            </li>
-        {%  endfor %}
-    </ul>
+    {%  if documents %}
+        <div class="caseStudyDataLabel">Documents</div>
+        <ul>
+            {%  for document in documents %}
+                <li>
+                    <div>{{  document.title }}</div>
+                    <div><a href="{{ path('case_store_case_study_document_download', { 'projectId':project.publicId, 'caseStudyId':caseStudy.publicId,'documentId':document.publicId  }) }}">Download {{ document.originalFileName }}</a></div>
+                </li>
+            {%  endfor %}
+        </ul>
+    {%  endif %}
 
     {%  if locations %}
+        <div class="caseStudyDataLabel">Locations</div>
         <div id="Map" style="width: 100%; height: 300px;"></div>
     {%  endif %}
 
-    <ul>
-        {%  for comment in comments %}
-            <li>{{  comment.body | nl2br }}</li>
-        {%  endfor %}
-    </ul>
+    {%  if comments %}
+        <div class="caseStudyDataLabel">Comments</div>
+        <ul class="caseStudyCommentList">
+            {%  for comment in comments %}
+                <li class="caseStudyComment">
+                   <div class="caseStudyCommentBody">{{  comment.body | nl2br }}</div>
+                   <div class="caseStudyCommentDetails">Posted by {{  comment.addedBy.username }}</div>
+                </li>
+            {%  endfor %}
+        </ul>
+    {%  endif %}
 
     <ul class="list-group">
         {%  if newCommentAllowed %}
@@ -63,7 +76,7 @@
             {%  for fieldDefinition in fieldDefinitions %}
                 <li class="list-group-item"><a href="{{ path('case_store_case_study_edit_field', { 'projectId':project.publicId, 'caseStudyId':caseStudy.publicId, 'fieldDefinitionId':fieldDefinition.publicId }) }}" class="btn btn-warning">Edit {{ fieldDefinition.title  }}</a></li>
             {%  endfor %}
-            <li class="list-group-item"><a href="{{  path('case_store_case_study_edit_users', { 'projectId':project.publicId, 'caseStudyId':caseStudy.publicId }) }}" class="btn btn-warning">Edit Users</a></li>
+            <li class="list-group-item"><a href="{{  path('case_store_case_study_edit_users', { 'projectId':project.publicId, 'caseStudyId':caseStudy.publicId }) }}" class="btn btn-warning">Edit Staff Involved</a></li>
             <li class="list-group-item"><a href="{{  path('case_store_case_study_edit_locations', { 'projectId':project.publicId, 'caseStudyId':caseStudy.publicId }) }}" class="btn btn-warning">Edit Locations</a></li>
             <li class="list-group-item"><a href="{{  path('case_store_case_study_new_document', { 'projectId':project.publicId, 'caseStudyId':caseStudy.publicId }) }}" class="btn btn-warning">New Document</a></li>
         {%  endif %}
