--- a/src/CaseStoreBundle/Resources/views/CaseStudyFieldDefinition/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/CaseStudyFieldDefinition/index.html.twig
@@ -1,3 +1,9 @@
+{#
+# @license 3-clause BSD
+# @link https://github.com/CaseStore/CaseStore-Core
+#}
+
+
 {% extends 'CaseStoreBundle::base.html.twig' %}
 
 {% block main %}
@@ -24,10 +30,7 @@
 
 
 
-    {%  if caseStudyFieldDefinition.isTypeSelect %}{#
-# @license 3-clause BSD
-# @link https://github.com/CaseStore/CaseStore-Core
-#}
+    {%  if caseStudyFieldDefinition.isTypeSelect %}
 
 
         <table class="table table-striped">
