--- a/src/CaseStoreBundle/Resources/views/Project/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/Project/index.html.twig
@@ -25,6 +25,12 @@
             <li class="list-group-item"><a href="{{  path('case_store_project_my_case_studies', { 'projectId':project.publicId }) }}" class="btn btn-default">My Case Studies</a></li>
         {%  endif %}
         <li class="list-group-item"><a href="{{  path('case_store_project_case_studies', { 'projectId':project.publicId }) }}" class="btn btn-default">Case Studies</a></li>
+        {% for fieldDefinition in fieldDefinitions %}
+            {%  if fieldDefinition.isTypeSelect %}
+                <li class="list-group-item"><a href="{{  path('case_store_project_case_study_select_field', { 'projectId':project.publicId,'fieldId':fieldDefinition.publicId }) }}" class="btn btn-default">Field {{  fieldDefinition.title }}</a></li>
+            {% endif %}
+        {%  endfor %}
+
         <li class="list-group-item"><a href="{{  path('case_store_project_case_study_field_definitions', { 'projectId':project.publicId }) }}" class="btn btn-default">Case Study Field Definitions</a></li>
         <li class="list-group-item"><a href="{{  path('case_store_project_map', { 'projectId':project.publicId }) }}" class="btn btn-default">Map</a></li>
         {% if newCaseStudyAllowed %}
