Create Project Admin Screen

--- a/src/CaseStoreBundle/Resources/views/Project/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/Project/index.html.twig
@@ -39,6 +39,9 @@
         {%  if newFieldDefinitionAllowed %}
             <li class="list-group-item"><a href="{{  path('case_store_new_case_study_field_definition', { 'projectId':project.publicId }) }}" class="btn btn-warning">New Case Study Field Definition</a></li>
         {%  endif %}
+        <li class="list-group-item"><a href="{{  path('case_store_project_admin', { 'projectId':project.publicId }) }}" class="btn btn-default">Project Admin</a></li>
+
     </ul>
 
 {%  endblock %}
+
