Move Admin functions into admin section

--- a/src/CaseStoreBundle/Resources/views/ProjectAdminCaseStudyFieldDefinition/newOption.html.twig
+++ b/src/CaseStoreBundle/Resources/views/ProjectAdminCaseStudyFieldDefinition/newOption.html.twig
@@ -9,7 +9,8 @@
 
     <ol class="breadcrumb">
         <li><a href="{{ path('case_store_project', { 'projectId':project.publicId }) }}">Project {{  project.title }}</a></li>
-        <li><a href="{{  path('case_store_project_case_study_field_definitions', { 'projectId':project.publicId }) }}">Case Study Field Definitions</a></li>
+        <li><a href="{{ path('case_store_project_admin', { 'projectId':project.publicId }) }}">Project Admin</a></li>
+        <li><a href="{{  path('case_store_project_admin_case_study_field_definitions', { 'projectId':project.publicId }) }}">Case Study Field Definitions</a></li>
         <li>Case Study Field Definition TODO</li>
         <li class="active">New Option</li>
     </ol>
@@ -32,3 +33,4 @@
 
 
 {%  endblock %}
+
