--- a/src/CaseStoreBundle/Resources/views/ProjectAdmin/caseStudyFieldDefinitions.html.twig
+++ b/src/CaseStoreBundle/Resources/views/ProjectAdmin/caseStudyFieldDefinitions.html.twig
@@ -10,6 +10,7 @@
 
     <ol class="breadcrumb">
         <li><a href="{{ path('case_store_project', { 'projectId':project.publicId }) }}">Project {{  project.title }}</a></li>
+        <li><a href="{{ path('case_store_project_admin', { 'projectId':project.publicId }) }}">Project Admin</a></li>
         <li class="active">Case Study Field Definitions</li>
     </ol>
 
@@ -35,9 +36,10 @@
                     {%  endif %}
                 </td>
                 <td>{{  caseStudyFieldDefinition.sort }}</td>
-                <td><a href="{{ path('case_store_case_study_field_definition', { 'projectId':project.publicId,'caseStudyFieldDefinitionId':caseStudyFieldDefinition.publicId }) }}">View</a></td>
+                <td><a href="{{ path('case_store_project_admin_case_study_field_definition', { 'projectId':project.publicId,'caseStudyFieldDefinitionId':caseStudyFieldDefinition.publicId }) }}">View</a></td>
             </tr>
         {%  endfor %}
     </table>
 
 {%  endblock %}
+
