--- a/src/CaseStoreBundle/Resources/views/ProjectAdmin/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/ProjectAdmin/index.html.twig
@@ -22,7 +22,8 @@
 
 
     <ul class="list-group">
-
+        <li class="list-group-item"><a href="{{  path('case_store_project_admin_case_study_field_definitions', { 'projectId':project.publicId }) }}" class="btn btn-default">Case Study Field Definitions</a></li>
+        <li class="list-group-item"><a href="{{  path('case_store_project_admin_new_case_study_field_definition', { 'projectId':project.publicId }) }}" class="btn btn-warning">New Case Study Field Definition</a></li>
     </ul>
 
 {%  endblock %}
