--- a/src/CaseStoreBundle/Resources/views/ProjectAdminCaseStudyFieldDefinition/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/ProjectAdminCaseStudyFieldDefinition/index.html.twig
@@ -10,7 +10,8 @@
 
     <ol class="breadcrumb">
         <li><a href="{{ path('case_store_project', { 'projectId':project.publicId }) }}">Project {{  project.title }}</a></li>
-        <li><a href="{{  path('case_store_project_case_study_field_definitions', { 'projectId':project.publicId }) }}">Case Study Field Definitions</a></li>
+        <li><a href="{{ path('case_store_project_admin', { 'projectId':project.publicId }) }}">Project Admin</a></li>
+        <li><a href="{{  path('case_store_project_admin_case_study_field_definitions', { 'projectId':project.publicId }) }}">Case Study Field Definitions</a></li>
         <li class="active">Case Study Field Definition</li>
     </ol>
 
@@ -50,7 +51,7 @@
 
         <ul class="list-group">
             {%  if newOptionAllowed %}
-                <li class="list-group-item"><a href="{{  path('case_store_case_study_field_definition_new_option', { 'projectId':project.publicId, 'caseStudyFieldDefinitionId':caseStudyFieldDefinition.publicId  }) }}" class="btn btn-warning">New Option</a></li>
+                <li class="list-group-item"><a href="{{  path('case_store_project_admin_case_study_field_definition_new_option', { 'projectId':project.publicId, 'caseStudyFieldDefinitionId':caseStudyFieldDefinition.publicId  }) }}" class="btn btn-warning">New Option</a></li>
             {%  endif %}
         </ul>
     {% endif %}
