--- a/src/CaseStoreBundle/Resources/views/ProjectCaseStudyField/selectField.html.twig
+++ b/src/CaseStoreBundle/Resources/views/ProjectCaseStudyField/selectField.html.twig
@@ -16,7 +16,7 @@
     <ul>
         {%  for option in options %}
             <li>
-                <div>{{  option.title }}</div>
+                <div><a href="{{  path('case_store_project_case_study_select_field_option', { 'projectId':project.publicId,'fieldId':caseStudyFieldDefinition.publicId,'optionId':option.publicId }) }}">{{  option.title }}</a></div>
             </li>
         {%  endfor %}
     </ul>
