--- a/src/CaseStoreBundle/Resources/views/ProjectAdmin/caseStudyFieldDefinitions.html.twig
+++ b/src/CaseStoreBundle/Resources/views/ProjectAdmin/caseStudyFieldDefinitions.html.twig
@@ -36,7 +36,7 @@
                     {%  endif %}
                 </td>
                 <td>{{  caseStudyFieldDefinition.sort }}</td>
-                <td><a href="{{ path('case_store_project_admin_case_study_field_definition', { 'projectId':project.publicId,'caseStudyFieldDefinitionId':caseStudyFieldDefinition.publicId }) }}">View</a></td>
+                <td><a href="{{ path('case_store_project_admin_case_study_field_definition', { 'projectId':project.publicId,'caseStudyFieldDefinitionId':caseStudyFieldDefinition.publicId }) }}" class="btn btn-default">View</a></td>
             </tr>
         {%  endfor %}
     </table>
