--- a/src/CaseStoreBundle/Resources/views/CaseStudy/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/CaseStudy/index.html.twig
@@ -34,7 +34,7 @@
         <div class="caseStudyDataLabel">Staff Involved</div>
         <ul>
             {%  for user in users %}
-                <li>{{  user.username }}</li>
+                <li>{{  user.username }} <a href="mailto:{{  user.email }}?subject=CaseStudy&body={{  app.request.getSchemeAndHttpHost() }}{{ path('case_store_case_study', { 'projectId':project.publicId, 'caseStudyId':caseStudy.publicId }) }}">Email them about this</a></li>
             {%  endfor %}
         </ul>
     {%  endif %}
