--- a/src/CaseStoreBundle/Resources/views/base.html.twig
+++ b/src/CaseStoreBundle/Resources/views/base.html.twig
@@ -40,6 +40,7 @@
                     </a></li>
                 {% else %}
                     <li><a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a></li>
+                    <li><a href="{{ path('fos_user_registration_register') }}">{{ 'layout.register'|trans({}, 'FOSUserBundle') }}</a></li>
                 {%  endif %}
 
                 {% block navigation %}
