--- a/src/CaseStoreBundle/Resources/views/CaseStudy/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/CaseStudy/index.html.twig
@@ -70,6 +70,22 @@
         </ul>
     {%  endif %}
 
+    {%  if outputs %}
+        <div class="caseStudyDataLabel">Outputs using this</div>
+        <ul class="caseStudyOutputList">
+            {%  for output in outputs %}
+                <li class="caseStudyOutput">
+                    <div>
+                        <a href="{{ path('case_store_output', { 'projectId':project.publicId,'outputId':output.publicId }) }}">{{  output.titleOrPlaceHolder }}</a>
+                    </div>
+                    <div>
+                        {{  output.description | nl2br }}
+                    </div>
+                </li>
+            {%  endfor %}
+        </ul>
+    {%  endif %}
+
     <ul class="list-group">
         {%  if newCommentAllowed %}
             <li class="list-group-item"><a href="{{  path('case_store_case_study_new_comment', { 'projectId':project.publicId, 'caseStudyId':caseStudy.publicId }) }}" class="btn btn-warning">New Comment</a></li>
