Name CSS classes correctly

--- a/src/CaseStoreBundle/Resources/public/css/main.css
+++ b/src/CaseStoreBundle/Resources/public/css/main.css
@@ -10,7 +10,7 @@
     text-align: center;
 }
 
-.caseStudyDataLabel {
+.caseStudyDataLabel, .outputDataLabel {
     font-weight: bold;
     font-size: 120%;
 }
