--- a/src/CaseStoreBundle/Resources/views/CaseStudy/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/CaseStudy/index.html.twig
@@ -90,7 +90,7 @@
         {%  if newCommentAllowed %}
             <li class="list-group-item"><a href="{{  path('case_store_case_study_new_comment', { 'projectId':project.publicId, 'caseStudyId':caseStudy.publicId }) }}" class="btn btn-warning">New Comment</a></li>
         {%  endif %}
-        {%  if true %}{# TODO #}
+        {%  if newOutputAllowed %}
             <li class="list-group-item"><a href="{{  path('case_store_new_output', { 'projectId':project.publicId }) }}?caseStudy={{ caseStudy.publicId }}" class="btn btn-warning">New Output using this Case Study</a></li>
         {%  endif %}
         {%  if editAccessAllowed %}
