Case Study Fields can be marked for users in case study only

--- a/src/CaseStoreBundle/Resources/views/ProjectAdminCaseStudyFieldDefinition/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/ProjectAdminCaseStudyFieldDefinition/index.html.twig
@@ -29,6 +29,9 @@
         Sort: {{  caseStudyFieldDefinition.sort }}
     </div>
 
+    <div>
+        Access: {%  if caseStudyFieldDefinition.isCaseStudyUsersOnly %}Case Study Users only{% else %}All{%  endif %}
+    </div>
 
 
     {%  if caseStudyFieldDefinition.isTypeSelect %}
