--- a/src/CaseStoreBundle/Resources/views/ProjectAdmin/caseStudyFieldDefinitions.html.twig
+++ b/src/CaseStoreBundle/Resources/views/ProjectAdmin/caseStudyFieldDefinitions.html.twig
@@ -20,6 +20,7 @@
             <th>Title</th>
             <th>Type</th>
             <th>Sort</th>
+            <th>Access</th>
             <th>Actions</th>
         </tr>
         {%  for caseStudyFieldDefinition in caseStudyFieldDefinitions %}
@@ -38,6 +39,7 @@
                     {%  endif %}
                 </td>
                 <td>{{  caseStudyFieldDefinition.sort }}</td>
+                <td>{%  if caseStudyFieldDefinition.isCaseStudyUsersOnly %}Case Study Users only{% else %}All{%  endif %}</td>
                 <td><a href="{{ path('case_store_project_admin_case_study_field_definition', { 'projectId':project.publicId,'caseStudyFieldDefinitionId':caseStudyFieldDefinition.publicId }) }}" class="btn btn-default">View</a></td>
             </tr>
         {%  endfor %}
