--- a/src/CaseStoreBundle/Resources/views/Project/map.html.twig
+++ b/src/CaseStoreBundle/Resources/views/Project/map.html.twig
@@ -23,30 +23,29 @@
 
 
 {% block javascript %}
-    {%  if locations %}
-        <script>
-            var mapObject;
-            var mapData = [];
-            {%  for location in locations %}
-            mapData.push({ lat: {{  location.lat}}, lng: {{  location.lng }}, url: '{{  path('case_store_case_study', { 'projectId':project.publicId, 'caseStudyId':location.caseStudy.publicId }) }}'  });
-            {%  endfor %}
+    <script>
+        var mapObject;
 
-            $( document ).ready(function() {
-                mapObject = L.map('Map').setView([57.04199, -3.55957], 6);
+        $( document ).ready(function() {
 
-                var mapquestUrl = 'http://{s}.mqcdn.com/tiles/1.0.0/osm/{z}/{x}/{y}.png',
-                        subDomains = ['otile1','otile2','otile3','otile4'],
-                        mapquestAttrib = 'Data, imagery and map information provided by <a href="http://open.mapquest.co.uk" target="_blank">MapQuest</a>, '+
-                                '<a href="http://www.openstreetmap.org/" target="_blank">OpenStreetMap</a> and contributors';
-                L.tileLayer(mapquestUrl, {maxZoom: 18, attribution: mapquestAttrib, subdomains: subDomains}).addTo(mapObject);
+            $.ajax({url: '{{ path('case_store_project_map_data_json', { 'projectId':project.publicId }) }}'})
+                .done(function(data) {
 
-                for (idx in mapData) {
-                    L.marker([ mapData[idx].lat, mapData[idx].lng]).addTo(mapObject).bindPopup('<a href="'+mapData[idx].url+'">View</a>');
-                }
+                    mapObject = L.map('Map').setView([57.04199, -3.55957], 6);
 
-            });
-        </script>
-    {%  endif %}
+                    var mapquestUrl = 'http://{s}.mqcdn.com/tiles/1.0.0/osm/{z}/{x}/{y}.png',
+                            subDomains = ['otile1','otile2','otile3','otile4'],
+                            mapquestAttrib = 'Data, imagery and map information provided by <a href="http://open.mapquest.co.uk" target="_blank">MapQuest</a>, '+
+                                    '<a href="http://www.openstreetmap.org/" target="_blank">OpenStreetMap</a> and contributors';
+                    L.tileLayer(mapquestUrl, {maxZoom: 18, attribution: mapquestAttrib, subdomains: subDomains}).addTo(mapObject);
+
+                    for (idx in data.data) {
+                        L.marker([ data.data[idx].lat, data.data[idx].lng]).addTo(mapObject).bindPopup('<a href="'+data.data[idx].url+'">'+ $('<div/>').text(data.data[idx].title).html() +'</a>');
+                    }
+                });
+
+        });
+    </script>
 {% endblock %}
 
 
