--- a/src/CaseStoreBundle/Resources/views/CaseStudy/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/CaseStudy/index.html.twig
@@ -49,7 +49,10 @@
         <ul>
             {%  for document in documents %}
                 <li>
-                    <div>{{  document.title }}</div>
+                    <div>
+                        {{  document.title }}
+                        {%  if document.isCaseStudyUsersOnly %}<div class="glyphicon glyphicon-eye-close" title="Only Staff Involved Can See This"></div>{%  endif %}
+                    </div>
                     <div><a href="{{ path('case_store_case_study_document_download', { 'projectId':project.publicId, 'caseStudyId':caseStudy.publicId,'documentId':document.publicId  }) }}">Download {{ document.originalFileName }}</a></div>
                 </li>
             {%  endfor %}
