When add new Project, autofill key using JavaScript closes https://github.com/CaseStore/CaseStore-Core/issues/22

--- a/src/CaseStoreBundle/Resources/views/ProjectNew/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/ProjectNew/index.html.twig
@@ -28,3 +28,11 @@
 
 
 {%  endblock %}
+
+{% block javascript %}
+    {% javascripts
+    '@CaseStoreBundle/Resources/public/js/newProjectSlug.js' %}
+    <script src="{{ asset_url }}"></script>
+    {% endjavascripts %}
+{% endblock %}
+
