When add new Output Field, autofill key using JavaScript

--- a/src/CaseStoreBundle/Resources/views/ProjectAdminOutputFieldDefinitionNew/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/ProjectAdminOutputFieldDefinitionNew/index.html.twig
@@ -36,3 +36,12 @@
 
 {%  endblock %}
 
+
+
+{% block javascript %}
+    {% javascripts
+    '@CaseStoreBundle/Resources/public/js/newOutputFieldDefinitionSlug.js' %}
+    <script src="{{ asset_url }}"></script>
+    {% endjavascripts %}
+{% endblock %}
+
