When add new Case Study Field, autofill key using JavaScript closes https://github.com/CaseStore/CaseStore-Core/issues/20

--- a/src/CaseStoreBundle/Resources/views/ProjectAdminCaseStudyFieldDefinitionNew/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/ProjectAdminCaseStudyFieldDefinitionNew/index.html.twig
@@ -36,3 +36,10 @@
 
 {%  endblock %}
 
+{% block javascript %}
+    {% javascripts
+    '@CaseStoreBundle/Resources/public/js/newCaseStudyFieldDefinitionSlug.js' %}
+    <script src="{{ asset_url }}"></script>
+    {% endjavascripts %}
+{% endblock %}
+
