When add new Case Study Field Option, autofill key using JavaScript closes https://github.com/CaseStore/CaseStore-Core/issues/21

--- a/src/CaseStoreBundle/Resources/views/ProjectAdminCaseStudyFieldDefinition/newOption.html.twig
+++ b/src/CaseStoreBundle/Resources/views/ProjectAdminCaseStudyFieldDefinition/newOption.html.twig
@@ -34,3 +34,12 @@
 
 {%  endblock %}
 
+
+
+{% block javascript %}
+    {% javascripts
+    '@CaseStoreBundle/Resources/public/js/newCaseStudyFieldOptionDefinitionSlug.js' %}
+    <script src="{{ asset_url }}"></script>
+    {% endjavascripts %}
+{% endblock %}
+
