--- a/src/CaseStoreBundle/Resources/views/base.html.twig
+++ b/src/CaseStoreBundle/Resources/views/base.html.twig
@@ -33,6 +33,7 @@
         <div id="navbar" class="navbar-collapse collapse">
 
             <ul class="nav navbar-nav">
+                <li><a href="{{ path('case_store_homepage_projects') }}">Projects</a></li>
                 {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
                     <li><a href="{{ path('case_store_you') }}">{{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }}</a></li>
                     <li><a href="{{ path('fos_user_security_logout') }}">
