--- a/src/CaseStoreBundle/Resources/views/CaseStudy/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/CaseStudy/index.html.twig
@@ -18,6 +18,9 @@
         <div class="caseStudyDataLabel">
             {{  fieldDefinition.title }}
             {%  if fieldDefinition.isCaseStudyUsersOnly %}<div class="glyphicon glyphicon-eye-close" title="Only Staff Involved Can See This"></div>{%  endif %}
+            {%  if editAccessAllowed %}
+                <a href="{{ path('case_store_case_study_edit_field', { 'projectId':project.publicId, 'caseStudyId':caseStudy.publicId, 'fieldDefinitionId':fieldDefinition.publicId }) }}"><div class="glyphicon glyphicon-pencil"></div></a>
+            {%  endif %}
         </div>
         {%  if fieldValues[fieldDefinition.publicId] is defined and fieldValues[fieldDefinition.publicId] %}
             {% if fieldDefinition.isTypeString %}
@@ -36,7 +39,12 @@
     {%  endfor %}
 
     {%  if users %}
-        <div class="caseStudyDataLabel">Staff Involved</div>
+        <div class="caseStudyDataLabel">
+            Staff Involved
+            {%  if editAccessAllowed %}
+                <a href="{{  path('case_store_case_study_edit_users', { 'projectId':project.publicId, 'caseStudyId':caseStudy.publicId }) }}"><div class="glyphicon glyphicon-pencil"></div></a>
+            {%  endif %}
+        </div>
         <ul>
             {%  for user in users %}
                 <li>{{  user.username }} <a href="mailto:{{  user.email }}?subject=CaseStudy&body={{  app.request.getSchemeAndHttpHost() }}{{ path('case_store_case_study', { 'projectId':project.publicId, 'caseStudyId':caseStudy.publicId }) }}">Email them about this</a></li>
@@ -60,7 +68,12 @@
     {%  endif %}
 
     {%  if locations %}
-        <div class="caseStudyDataLabel">Locations</div>
+        <div class="caseStudyDataLabel">
+            Locations
+            {%  if editAccessAllowed %}
+                <a href="{{  path('case_store_case_study_edit_locations', { 'projectId':project.publicId, 'caseStudyId':caseStudy.publicId }) }}"><div class="glyphicon glyphicon-pencil"></div></a>
+            {%  endif %}
+        </div>
         <div id="Map" style="width: 100%; height: 300px;"></div>
     {%  endif %}
 
