--- a/src/CaseStoreBundle/Resources/views/Project/index.html.twig
+++ b/src/CaseStoreBundle/Resources/views/Project/index.html.twig
@@ -26,6 +26,7 @@
             <li class="list-group-item"><a href="{{  path('case_store_project_my_case_studies', { 'projectId':project.publicId }) }}" class="btn btn-default">My Case Studies</a></li>
         {%  endif %}
         <li class="list-group-item"><a href="{{  path('case_store_project_case_studies', { 'projectId':project.publicId }) }}" class="btn btn-default">Case Studies</a></li>
+        <li class="list-group-item"><a href="{{  path('case_store_project_case_studies_search', { 'projectId':project.publicId }) }}" class="btn btn-default">Case Studies Advanced Search</a></li>
         {% for fieldDefinition in fieldDefinitions %}
             {%  if fieldDefinition.isTypeSelect %}
                 <li class="list-group-item"><a href="{{  path('case_store_project_case_study_select_field', { 'projectId':project.publicId,'fieldId':fieldDefinition.publicId }) }}" class="btn btn-default">Browse by {{  fieldDefinition.title }}</a></li>
